--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     volumes:
       - ./grafana:/var/lib/grafana
   prometheus:
-    image: prom/prometheus
+    image: prom/prometheus:1.5.2
     ports:
       - "9090:9090"
     volumes:
